
      - fixed 101240: SilvaExternalSource cannot be disabled.

      - fixed 100835: image upload screen should show allowed formats

      - fixed 101174: When an id is in use on the Zope level, inform 
                      users accordingly
      
      - Added True switch to Image.py tag method to escape double quotes.

    Bugfixes ported from 2.0 branch

      - fixed 157010: anchors in links: # -> %23

      - fixed wuw140: Incorrect caching of images.

      - fixed 150809: sidebar cache not invalidated when folder
        removed

      - Adding Groups, Virtual Groups and IPGroups was broken.

      - creationdate is once again set on versioned content.

      - The lookup window allowed one to add content and assets to
        ghostfolders, which isn't really advisable. This is no longer
        possible.

      - Fixed the thumbnailing/caching bug. When a thumbnailed image
        was resized back to 100%, a copy was being made to make sure
        the modification date headers are newer. I changed this so
        only the modifcation date is updated, but no copy of the image
        is being made, instead the original image is used.

      - Removed extra <br/> tag when viewing codesources in kupu.

      - fix for bug 109008: wrong tooltip when hovering over version
        status link

      - importing a zexp file with the Silva root in there was
        failing, because a Zope 3 event got fired that tried to re-add
        'collection' to 'service_metadata' while this is already
        there. Added a check to SilvaMetadata (1.0.1) that fixes this.

      - fix for bug: 101651: default settings for columns / rows on
        table creation in kupu

      - widget-based and xslt renderers render underlines in the same
        way with <span class="underline">

      - fixed 101494: Empty "source" elements break the XSLT renderer

      - fixed 101396: paragraphs in lists, tables rendered differently
        in widgets vs xslt renderers
