@@ -1126,3 +1126,10 @@ class IIPGroup(ISilvaObject):
             A group asset becomes invalid if it gets moved around ...
         """
     
+class IVirtualGroup(ISilvaObject):
+    def isValid():
+        """returns whether the group asset is valid
+
+            A group asset becomes invalid if it gets moved around ...
+        """
+    
