@@ -34,6 +34,8 @@ Silva changes
 
     Bugfixes ported from 2.0 branch
 
+      - fixed 158384: can't add groups: title error issue
+
       - fixed 157010: anchors in links: # -> %23
 
       - fixed wuw140: Incorrect caching of images.
@@ -88,7 +90,7 @@ Silva changes
 
       - fixed "excessive recursion" error when users click 'new version' 
         to make a new copy of a silva document to edit then click the
-        browsers back button and click 'new version' again.
+        browser's back button and click 'new version' again.
 
     Features added:
 
